--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         <table class="table">
             <thead>
             <tr>
-                <th scope="col">id</th>
+                <th scope="col">ID</th>
                 <th scope="col">Title</th>
                 <th scope="col">Status</th>
                 <th scope="col">Update</th>
