--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="container" style="margin-top: 100px">
-    <h3>Todo List</h3>
+    <h3>Todo Items</h3>
     <hr>
     <form action="/add" method="post">
         <div class="form-group">
